# TinyRecursiveModels

./: CITATION.cff  README.md  pretrain.py  pyproject.toml
tiny_recursive_models/: pretrain.py  puzzle_dataset.py
tiny_recursive_models/dataset/: build_arc_dataset.py  build_maze_dataset.py  build_sudoku_dataset.py
tiny_recursive_models/models/: layers.py  sparse_embedding.py
tiny_recursive_models/models/recursive_reasoning/: hrm.py  transformers_baseline.py  trm.py  trm_hier6.py  trm_singlez.py
