[project]
name = "tiny_recursive_models"
version = "0.0.1"
description = "Less is More: Recursive Reasoning with Tiny Networks"
readme = "README.md"
authors = [{ name = "Alexia Jolicoeur-Martineau" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "adam-atan2-pytorch>=0.2.4",
    # "adam-atan2>=0.0.3",
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "huggingface-hub>=1.1.5",
    "hydra-core>=1.3.2",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "triton>=3.5.1",
    "wandb>=0.23.0",
    "wheel>=0.45.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny_recursive_models"]

[tool.uv.extra-build-dependencies]
adam_atan2 = [
    { requirement = "torch", match-runtime = true },
    { requirement = "numpy", match-runtime = true },
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
